# uDrive

./: .gitignore  .travis.yml  Dockerfile  README.md  index.html  params.json
client/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
client/doc/com/fiuba/app/udrive/: ApplicationTest.html  BuildConfig.html  FileListActivity.html  FilesArrayAdapter.html  MainActivity.html  R.anim.html  R.attr.html  R.bool.html  R.color.html  R.dimen.html  R.drawable.html  R.html  R.id.html  R.integer.html  R.layout.html  R.menu.html  R.mipmap.html  R.string.html  R.style.html  R.styleable.html  package-frame.html  package-summary.html  package-tree.html
client/doc/com/fiuba/app/udrive/model/: File.html  ObjectStream.html  UserAccount.html  UserData.html  UserProfile.html  package-frame.html  package-summary.html  package-tree.html
client/doc/com/fiuba/app/udrive/network/: AbstractService.html  FilesService.html  LoginService.html  ServiceCallback.html  StatusCode.html  package-frame.html  package-summary.html  package-tree.html
client/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
client/src/Udrive/: .gitignore
client/src/Udrive/app/: app-release.apk  app.jks  build.gradle  proguard-rules.pro
client/src/Udrive/app/src/androidTest/java/com/fiuba/app/udrive/: ApplicationTest.java
client/src/Udrive/app/src/androidTest/java/com/fiuba/tallerprog2/udrive/: ApplicationTest.java
client/src/Udrive/app/src/main/: AndroidManifest.xml
client/src/Udrive/app/src/main/java/com/fiuba/app/udrive/: CollabListViewAdapter.java  CollaboratorsArrayAdapter.java  CollaboratorsListAdapter.java  DisplayMessageActivity.java  FileInfoActivity.java  FileListActivity.java  FileSearchEmptyActivity.java  FilesArrayAdapter.java  MainActivity.java  SearchUsersActivity.java  SearchUsersAdapter.java  SettingsActivity.java  SettingsListAdapter.java  ShareActivity.java  (+4 more)
client/src/Udrive/app/src/main/res/drawable/: arrow_down_bold_circle_outline.xml  at.xml  btn_context_menu.xml  calendar_clock.xml  close_box_outline.xml  file_cloud.xml  folder_account.xml  image_border.xml  pencil_box.xml  pencil_box_outline.xml  plus_circle_outline.xml  regex.xml  tab_pressed.xml  tab_selected.xml  tab_unselected.xml  tag_multiple.xml
client/src/Udrive/app/src/main/res/layout/: activity_display_message.xml  activity_file_info.xml  activity_file_list.xml  activity_file_search_empty.xml  activity_main.xml  activity_search_users.xml  activity_settings.xml  activity_share.xml  activity_sign_up.xml  activity_trash.xml  activity_user_profile.xml  activity_users_list.xml  content_sign_up.xml  edit_file_name.xml  edit_fullname_layout.xml  file_info_item.xml  file_list_item.xml  file_tag_layout.xml  filesearch_custom_dialog.xml  new_folder.xml  prev_version_layout.xml  search_user_list_item.xml  settings_item.xml  tab_layout.xml  trashed_file_list_item.xml  users_list_item.xml  view_context_menu.xml
client/src/Udrive/app/src/main/res/menu/: menu_file_detail.xml  menu_file_list.xml  menu_main_settings.xml  menu_search_users.xml  menu_share.xml  menu_trash.xml
client/src/Udrive/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
client/src/Udrive/app/src/main/res/values-es/: strings.xml
client/src/Udrive/app/src/main/res/values-v21/: styles.xml
doc/diagrams/: Server_Class_Diagram.asta
doc/project-technical-manual/: Makefile
doc/project-technical-manual/source/: conf.py
doc/source/: uDriveDoc.rst
doc/user-manual/: Makefile
doc/user-manual/source/: conf.py  index.rst
server/: .travis.yml  CMakeLists.txt  Dockerfile  INSTALL.md  build.sh  config.yml  server_install_v0.1.sh  server_install_v0.2.sh  server_install_v0.3.sh  server_install_v0.4.sh  server_install_v0.5.sh
server/lib/mongoose/: mongoose.c  mongoose.h
server/src/: LibraryTest.cpp  LibraryTest.h  WEBserver.cc  WEBserver.cpp  WEBserver.h  config_parser.cc  config_parser.h  data_handler.cc  data_handler.h  db_constants.h  db_handler.cc  db_handler.h  file_handler.cc  file_handler.h  helloworld.cc  helloworld.h  main.cc  main.cpp  mg_connection.cc  mg_connection.h  mg_connection_w.cc  mg_connection_w.h  request_dispatcher.cc  request_dispatcher.h  web_server.cc  web_server.h  zip_handler.cc  zip_handler.h
server/src/mongoose/: mgconnection.cc
server/src/rest/: create_dir_node.cc  create_dir_node.h  delete_dir_node.cc  delete_dir_node.h  delete_file_node.cc  delete_file_node.h  delete_file_trash_node.cc  delete_file_trash_node.h  delete_trash_node.cc  delete_trash_node.h  info_node.cc  info_node.h  info_trash_node.cc  info_trash_node.h  list_collaborators_node.cc  list_collaborators_node.h  list_info_elem_node.cc  list_info_elem_node.h  list_owners_node.cc  list_owners_node.h  list_revisions_node.cc  list_revisions_node.h  list_tags_node.cc  list_tags_node.h  list_tags_user_node.cc  list_tags_user_node.h  modify_name_dir_node.cc  modify_name_dir_node.h  node.cc  node.h  profile_node.cc  profile_node.h  receive_file_node.cc  receive_file_node.h  restore_file_trash_node.cc  restore_file_trash_node.h  restore_trash_node.cc  restore_trash_node.h  search_extension_node.cc  search_extension_node.h  (+28 more)
server/src/util/: bin2hex.cc  bin2hex.h  config_parser.cc  config_parser.h  log.cc  log.cpp  log.h  md5.cc  md5.h  random_number.cc  random_number.h
server/test/: test.cc  test.cpp  test_basic.cc  test_basic.h
server/tools/coveralls-cmake/cmake/: CoverallsGenerateGcov.cmake
src/cliente/: .gitignore
src/cliente/Udrive/app/: build.gradle
src/cliente/Udrive/app/src/main/: AndroidManifest.xml
src/cliente/Udrive/app/src/main/res/values/: strings.xml
src/cliente/Udrive/gradle/wrapper/: gradle-wrapper.properties
(+40 files in other folders)
